<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Android Training: Location Update</string>
    <string name="address">Address:</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Lat/Long:</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="use_fine_provider">Fine-grain provider</string>
    <string name="use_both_providers">Both providers</string>

    <string name="pref_location_1_longitude_label">Location primonics longitude Setting</string>
    <string name="pref_location_1_longitude_key">longitude_1</string>
    <string name="pref_location_longitude_primonics">-73.91762163</string>

    <string name="pref_location_1_latitude_label">Location primonics latitude Setting</string>
    <string name="pref_location_1_latitude_key">latitude_1</string>
    <string name="pref_location_latitude_primonics">45.4222399</string>


    <string name="pref_location_2_longitude_label">Location vendome longitude Setting</string>
    <string name="pref_location_2_longitude_key">longitude_2</string>
    <string name="pref_location_longitude_vendome">-73.603663</string>

    <string name="pref_location_2_latitude_label">Location vendome latitude Setting</string>
    <string name="pref_location_2_latitude_key">latitude_2</string>
    <string name="pref_location_latitude_vendome">45.474996</string>

    <string name="action_settings">location setting</string>
    <string name="title_activity_settings">location setting</string>
</resources>
